@@ -43,7 +43,7 @@ class SystemSettingPane(gtk.VBox):
         self.left_store = left_store = gtk.ListStore(gtk.gdk.Pixbuf, str, str) #pixbuf, text, category
         
         for iconpath, text, category in [
-              (D+'other_icons/s_nautilus.png', 'Nautilus', 'nautilus', ), 
+              (D+'other_icons/s_nautilus.png', _('Nautilus'), 'nautilus', ), 
               (D+'other_icons/s_desktop.png', _('Desktop'), 'desktop', ), 
               (D+'umut_icons/s_window.png', _('Window effect'), 'window', ), 
               (D+'umut_icons/s_menu.png', _('Menu'), 'menu', ), 
@@ -62,6 +62,7 @@ class SystemSettingPane(gtk.VBox):
               (D+'other_icons/s_configure_firefox.png', _('Configure Firefox'), 'firefox', ),
               (D+'umut_icons/s_host_name.png', _('Host name'), 'host_name', ),
               (D+'umut_icons/s_login_window.png', _('Login window'), 'login_window', ),
+              (D+'umut_icons/s_compression.png', _('Compression'), 'compression', ),
                 ]:
             if category in existing_categories:
                 pixbuf = icon(iconpath) 
