@@ -6,6 +6,7 @@
 
     * Add some eclipse extensions for Fedora
     * Add ESET NOD32
+    * Add compression strategy setting
     
 2010-05-29 Homer Xing <homer.xing@gmail.com>
 
